More spacing corrections.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -213,8 +213,9 @@ section {
 }
 
 .advocacy {
-    height: calc(#{$ht-def} - 10rem);
+    height: calc(#{$ht-def} - 30rem);
     .info-wrap {
+        padding-top: 0;
         height: 100%;
     }
         h2 {
@@ -245,6 +246,7 @@ section {
     height: 18rem;
     color: $main-color;
     .info-wrap {
+        padding-top: 0;
         height: 100%;
     }
     .row{
